# ArtificialWorld

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  user_data.json
.github/workflows/: python-pubish.yml
src/: artificial_intelligence.py  audio.py  file_management.py  listener.py  object_management.py  schedule_management.py  value_setter.py
src/artificial_world/: cli.py  init.py
src/modules/: artificial_intelligence.py  conversation_management.py  external_management.py  file_management.py  logger.py  object_management.py  schedule_management.py
