# ...existing code...
[metadata]
name = artificialworld
version = 0.1.0
description = ArtificialWorld - collection of utilities and modules
long_description = file: README.md
long_description_content_type = text/markdown
author = David
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    requests>=2.0
    concurrent-log-handler>=0.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    aw-cli = artificial_world.cli:main
    uv = artificial_world.cli:main
